--- a/Project1-PersonalPage-main/Project1-PersonalPage-main/index.html
+++ b/Project1-PersonalPage-main/Project1-PersonalPage-main/index.html
@@ -34,11 +34,12 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias expedita illo perferendis, esse obcaecati repudiandae recusandae maiores assumenda modi laborum quos veniam asperiores error ea reiciendis rem, laudantium temporibus.</p>
         <p>I'd like to learn:</p>
         <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>Parminder</li>
+          <li>Parminder</li>
+          <li>Parminder</li>
+          <li>Parminder</li>
+          <li>Parminder</li>
+          <li>Parminder</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
